<project 
    xmlns="http://maven.apache.org/POM/4.0.0" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.17</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>uk.co.caprica</groupId>
    <artifactId>bootlace</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>Bootlace</name>
    <description>Single Page AngularJS reference web application using SpringMVC and Spring Security.</description>
    <url>http://capricasoftware.co.uk/bootlace</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Caprica Software Limited</name>
        <url>http://www.capricasoftware.co.uk</url>
    </organization>

    <developers>
        <developer>
            <id>mark</id>
            <name>Mark Lee</name>
            <email>mark.lee@capricasoftware.co.uk</email>
            <url>https://github.com/caprica/bootlace</url>
            <organization>Caprica Software Limited</organization>
            <organizationUrl>http://www.capricasoftware.co.uk</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
                <role>owner</role>
            </roles>
            <timezone>0</timezone>
        </developer>
    </developers>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/caprica/bootlace/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git@github.com:caprica/bootlace.git</connection>
        <developerConnection>scm:git:git@github.com:caprica/bootlace.git</developerConnection>
        <url>git@github.com:caprica/bootlace.git</url>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <!-- Using explicit version matching the parent -->
                <version>2.7.17</version>
                <configuration>
                    <jvmArguments>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
                    </jvmArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.9.10</version>
                <configuration>
                    <!-- Operate in offline mode to avoid authentication issues -->
                    <offline>true</offline>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>17</release>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <!-- Removed cobertura-maven-plugin as it's not compatible with Java 17 -->
        </plugins>
    </build>

    <!-- 
        Removed reporting section as it was causing issues with plugin compatibility.
        This can be re-added later if needed with proper plugin dependencies.
    -->

    <!-- FIXME don't really want this, but it otherwise generates (harmless) exceptions in mvn:site log -->
    <repositories>
        <repository>
            <id>gemfire-repository</id>
            <name>Gemfire Repository</name>
            <url>http://dist.gemstone.com/maven/release</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
            <artifactId>owasp-java-html-sanitizer</artifactId>
            <version>20220608.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-messaging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-websocket</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <!-- Removed Tomcat exclusion to use default embedded server -->
        </dependency>
        <!-- Removed Jetty dependency as we're now using Tomcat (default) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
    </dependencies>

    <properties>
        <start-class>uk.co.caprica.bootlace.BootlaceApplication</start-class>
        <java.version>17</java.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

</project>
